ubuntu-release-upgrader (1:22.04.8) UNRELEASED; urgency=medium

  [ Brian Murray ]
  * Update the firefox deb2snap entry so that it includes Ubuntu Studio.

  [ Christian Ehrhardt ]
  * d/91-release-upgrade: try to use the less expensive /etc/lsb-release
    to check if we are in a devel release (LP: #1893716)

 -- Brian Murray <brian@ubuntu.com>  Wed, 16 Mar 2022 08:39:46 -0700

ubuntu-release-upgrader (1:22.04.7) jammy; urgency=medium

  [ Brian Murray ]
  * Inclusive naming updates.

  [ Nick Rosbrook ]
  * Replace core18 with core20 in DistUpgrade/deb2snap.json.
  * Add firefox deb2snap entries for appropriate flavors. This includes
    Kubuntu, where an issue was already reported (LP: #1964443).

 -- Brian Murray <brian@ubuntu.com>  Mon, 14 Mar 2022 10:47:02 -0700

ubuntu-release-upgrader (1:22.04.6) jammy; urgency=medium

  * Prevent upgrades to jammy on POWER8 (LP: #19602550).

 -- Nick Rosbrook <nick.rosbrook@canonical.com>  Wed, 23 Feb 2022 12:37:39 -0800

ubuntu-release-upgrader (1:22.04.5) jammy; urgency=medium

  [ Brian Murray ]
  * debian/control: rename the main branch
  * Increase the fallback KERNEL_INITRD_SIZE so that there is room for
    commonly used modules in the initramfs subsequently some upgrades may be
    disallowed due to a lack of free space in /boot.
  * Run pre-build.sh: updating mirrors, demotions, and translations.

  [ Nick Rosbrook ]
  * Update download rates in estimated download message (LP: #1947581)
  * Use org.freedesktop.ScreenSaver to inhibit screen lock (LP: #1959458).
    This approach also works in Kubuntu.

 -- Brian Murray <brian@ubuntu.com>  Mon, 14 Feb 2022 11:01:58 -0800

ubuntu-release-upgrader (1:22.04.4) jammy; urgency=medium

  [ Steve Langasek ]
  * DistUpgrade/DistUpgradeController.py: remove references to
    archive.canonical.com from sources.list on upgrade.  LP: #1959343.

  [ Brian Murray ]
  * tests/test_sources_list.py: update the tests which expected / utilized the